--- a/view/login.html
+++ b/view/login.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
+  <h1>login page</h1>
+  <p style="color: red;">{{ .error }}</p>
+
   <form action="/login" method="POST">
-    <h1>login page</h1>
     <div>
       <label for="id">id</label>
       <input type="text" name="id" id="id">
